fix: replaced regular threads with virtual ones for blocking operations and added proper resource management for ExecutorService