@@ -16,38 +16,41 @@ public class Main {
     private static final SecureRandom secureRandom = new SecureRandom();
 
     public static void main(String[] args) {
+        try {
+            while (true) {
+                printMenu();
+                int choice = getIntInput("Для выбора задания введите команду в скобках ");
 
-        while (true) {
-            printMenu();
-            int choice = getIntInput("Для выбора задания введите команду в скобках ");
+                switch (choice) {
+                    case 0:
+                        exitProgram();
+                        return;
+                    case 1:
+                        executeTask1();
+                        waitForEnter();
+                        break;
+                    case 2:
+                        executeTask2();
+                        waitForEnter();
+                        break;
+                    case 3:
+                        executeTask3();
+                        waitForEnter();
+                        break;
+                    default:
+                        System.out.println("!!!! Неверный выбор. Попробуйте снова !!!!");
+                        waitForEnter();
+                }
 
-            switch (choice) {
-                case 0:
-                    exitProgram();
-                    return;
-                case 1:
-                    executeTask1();
-                    waitForEnter();
-                    break;
-                case 2:
-                    executeTask2();
-                    waitForEnter();
-                    break;
-                case 3:
-                    executeTask3();
-                    waitForEnter();
-                    break;
-                default:
-                    System.out.println("!!!! Неверный выбор. Попробуйте снова !!!!");
-                    waitForEnter();
+                System.out.println("\n" + "=".repeat(50) + "\n");
             }
-
-            System.out.println("\n" + "=".repeat(50) + "\n");
+        } finally {
+            scanner.close();
         }
     }
 
     private static void printMenu() {
-        System.out.println("**** Лабораторная работа №5 ****");
+        System.out.println("**** Лабораторная работа №5");
         System.out.println("(1) ---- Задание 1");
         System.out.println("(2) ---- Задание 2");
         System.out.println("(3) ---- Задание 3");
@@ -58,7 +61,7 @@ public class Main {
         System.out.println("\n$$$$ Задание 1 $$$$");
 
         Thread evenThread = new EvenThread();
-        Thread oddThread = new Thread(new OddRunnable());
+        Thread oddThread = Thread.ofVirtual().name("OddThread").unstarted(new OddRunnable());
 
         System.out.println("++++ Запуск потоков ++++");
 
@@ -82,7 +85,7 @@ public class Main {
         ShoeWarehouse warehouse = new ShoeWarehouse();
         int orderCount = 10;
 
-        Thread producerThread = new Thread(() -> {
+        Thread producerThread = Thread.ofVirtual().name("Producer").unstarted(() -> {
             System.out.println(" Producer: запуск генерации " + orderCount + " заказов");
 
             for (int i = 1; i <= orderCount; i++) {
@@ -96,10 +99,10 @@ public class Main {
                 }
             }
             System.out.println("//// Producer завершил генерацию заказов");
-        }, "Producer");
+        });
 
-        Thread consumer1 = new Thread(new Consumer(warehouse, "Consumer-1"), "Consumer-1");
-        Thread consumer2 = new Thread(new Consumer(warehouse, "Consumer-2"), "Consumer-2");
+        Thread consumer1 = Thread.ofVirtual().name("Consumer-1").unstarted(new Consumer(warehouse, "Consumer-1"));
+        Thread consumer2 = Thread.ofVirtual().name("Consumer-2").unstarted(new Consumer(warehouse, "Consumer-2"));
 
         producerThread.start();
         consumer1.start();
@@ -126,30 +129,33 @@ public class Main {
         ExecutorWarehouse warehouse = new ExecutorWarehouse();
         int orderCount = 15;
 
-        ExecutorService executor = Executors.newFixedThreadPool(4);
-
-        System.out.println("++++ Запуск ExecutorService с 4 потоками ++++");
-
-        for (int i = 1; i <= orderCount; i++) {
-            final int orderId = i;
-            executor.submit(() -> {
-                Order order = new Order(orderId, getRandomShoeType(), secureRandom.nextInt(10) + 1);
-                warehouse.receiveOrder(order);
-            });
-        }
-
-        executor.submit(() -> warehouse.fulfillOrder("Executor-Consumer-1"));
-        executor.submit(() -> warehouse.fulfillOrder("Executor-Consumer-2"));
-
-        executor.shutdown();
-
+        ExecutorService executor = null;
         try {
+            executor = Executors.newThreadPerTaskExecutor(Thread.ofVirtual().factory());
+
+            System.out.println("++++ Запуск ExecutorService с виртуальными потоками ++++");
+
+            for (int i = 1; i <= orderCount; i++) {
+                final int orderId = i;
+                executor.submit(() -> {
+                    Order order = new Order(orderId, getRandomShoeType(), secureRandom.nextInt(10) + 1);
+                    warehouse.receiveOrder(order);
+                });
+            }
+
+            executor.submit(() -> warehouse.fulfillOrder("Executor-Consumer-1"));
+            executor.submit(() -> warehouse.fulfillOrder("Executor-Consumer-2"));
+
+            executor.shutdown();
+
             if (!executor.awaitTermination(5, TimeUnit.SECONDS)) {
                 System.out.println("!!!!  Принудительное завершение !!!!");
                 executor.shutdownNow();
             }
         } catch (InterruptedException e) {
-            executor.shutdownNow();
+            if (executor != null) {
+                executor.shutdownNow();
+            }
             Thread.currentThread().interrupt();
         }
 
@@ -163,7 +169,6 @@ public class Main {
 
     private static void exitProgram() {
         System.out.println("//// Выход из программы...");
-        scanner.close();
         System.out.println("//// Программа завершена.");
     }
 
